--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -3420,16 +3420,16 @@ FONT 8, "MS Sans Serif"
   CONTROL "Provincia", -1, "Static", WS_GROUP, 7, 62, 33, 8
 }
 
-CLIENT DIALOG DISCARDABLE 138, 96, 504, 317
+CLIENT DIALOG DISCARDABLE 138, 96, 504, 339
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU
 CAPTION "Clientes"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 500, "SysTabControl32", 0x00000000, 2, 3, 500, 280
-  CONTROL "A&nterior [F7]", 3, "Button", 0x00000000, 1, 288, 50, 14
-  CONTROL "&Siguiente [F8]", 4, "Button", 0x00000000, 57, 288, 50, 14
-  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 396, 288, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 452, 288, 50, 14
+  CONTROL "", 500, "SysTabControl32", 0x00000000, 2, 3, 500, 299
+  CONTROL "A&nterior [F7]", 3, "Button", 0x00000000, 1, 306, 50, 14
+  CONTROL "&Siguiente [F8]", 4, "Button", 0x00000000, 57, 306, 50, 14
+  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 396, 306, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 452, 306, 50, 14
 }
 
 CLIENT_0 DIALOG DISCARDABLE 35, -50, 496, 267
@@ -20583,7 +20583,7 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
 
-CLIENT_1 DIALOG DISCARDABLE -3, 20, 496, 263
+CLIENT_1 DIALOG DISCARDABLE -3, 20, 496, 280
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
@@ -20594,12 +20594,12 @@ FONT 8, "MS Sans Serif"
   CONTROL "Publicar en web", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 305, 77, 66, 11
   CONTROL "", 146, "Edit", WS_BORDER|WS_TABSTOP, 101, 100, 114, 11
   CONTROL "", 147, "Edit", WS_BORDER|WS_TABSTOP, 101, 113, 114, 11
-  CONTROL "Autorizado para venta de crédito", 140, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 208, 124, 10
-  CONTROL "Bloquear con riesgo alcanzado", 145, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 221, 124, 10
-  CONTROL "", 250, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 101, 235, 114, 11
-  CONTROL "", 251, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 101, 247, 114, 11
-  CONTROL "", 252, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 257, 235, 77, 11
-  CONTROL "", 253, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 257, 247, 77, 11
+  CONTROL "Autorizado para venta de crédito", 140, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 208, 116, 10
+  CONTROL "Bloquear con riesgo alcanzado", 145, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 221, 111, 10
+  CONTROL "", 250, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 225, 208, 116, 11
+  CONTROL "", 251, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 225, 220, 116, 11
+  CONTROL "", 252, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 390, 207, 98, 11
+  CONTROL "", 253, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 390, 219, 98, 11
   CONTROL "Lun.", 230, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 390, 40, 27, 11
   CONTROL "", 330, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 421, 39, 30, 11
   CONTROL "", 430, "Edit", WS_BORDER|WS_TABSTOP, 453, 39, 34, 11
@@ -20621,31 +20621,33 @@ FONT 8, "MS Sans Serif"
   CONTROL "Dom.", 236, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 390, 112, 30, 11
   CONTROL "", 336, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 421, 111, 30, 11
   CONTROL "", 436, "Edit", WS_BORDER|WS_TABSTOP, 453, 111, 34, 11
-  CONTROL "Excluir de fidelización", 158, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 391, 205, 81, 11
-  CONTROL "", 210, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 390, 141, 96, 11
-  CONTROL "Bloquear cliente", 155, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 391, 218, 64, 11
-  CONTROL "", 156, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 428, 232, 60, 11
-  CONTROL "", 157, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 391, 245, 96, 11
+  CONTROL "Excluir de fidelización", 158, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 390, 179, 81, 11
+  CONTROL "", 210, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 390, 139, 96, 11
+  CONTROL "Bloquear cliente", 155, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 276, 249, 64, 11
+  CONTROL "", 156, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 428, 250, 60, 11
+  CONTROL "", 157, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 327, 263, 161, 11
+  CONTROL "Inactivo", 255, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 250, 81, 11
+  CONTROL "", 256, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 179, 250, 83, 11
+  CONTROL "", 257, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 101, 263, 161, 11
   CONTROL "Nombre ", -1, "Static", WS_GROUP, 50, 41, 26, 8
   CONTROL "Domicilio", -1, "Static", WS_GROUP, 50, 54, 31, 8
   CONTROL "Web", -1, "Static", WS_GROUP, 50, 66, 21, 8
-  CONTROL "Riesgo ", -1, "Static", WS_GROUP, 50, 235, 29, 11
-  CONTROL "Alcanzado", -1, "Static", WS_GROUP, 50, 247, 39, 11
+  CONTROL "Riesgo ", -1, "Static", WS_GROUP, 180, 208, 29, 11
+  CONTROL "Alcanzado", -1, "Static", WS_GROUP, 180, 220, 39, 11
   CONTROL "Mes de vacaciones", -1, "Static", WS_GROUP, 390, 127, 73, 10
   CONTROL "Establecimiento", -1, "Button", BS_GROUPBOX, 44, 29, 338, 61
-  CONTROL "Bloqueo", -1, "Button", BS_GROUPBOX, 384, 193, 108, 67
-  CONTROL "Días de visita", -1, "Button", BS_GROUPBOX, 384, 29, 108, 129
-  CONTROL "Crédito", -1, "Button", BS_GROUPBOX, 43, 196, 338, 64
-  CONTROL "Fecha", -1, "Static", WS_GROUP, 391, 232, 25, 10
+  CONTROL "Bloqueo", -1, "Button", BS_GROUPBOX, 269, 240, 222, 38
+  CONTROL "Días de visita", -1, "Button", BS_GROUPBOX, 384, 29, 108, 166
+  CONTROL "Crédito", -1, "Button", BS_GROUPBOX, 43, 196, 449, 42
+  CONTROL "Fecha", -1, "Static", WS_GROUP, 398, 252, 25, 10
   CONTROL "Contraseña", -1, "Static", WS_GROUP, 50, 78, 37, 8
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Datos realcionados con la actividad comercial del cliente ", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 446, 8
-  CONTROL "", 600, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 403, 175, 56, 11
-  CONTROL "", 601, "Edit", WS_BORDER|WS_TABSTOP, 460, 175, 26, 11
-  CONTROL "", 602, "TBtnBmp", 0x00000000, 390, 175, 12, 11
+  CONTROL "", 600, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 403, 166, 56, 11
+  CONTROL "", 601, "Edit", WS_BORDER|WS_TABSTOP, 460, 166, 26, 11
+  CONTROL "", 602, "TBtnBmp", 0x00000000, 390, 166, 12, 11
   CONTROL "Codificación especial", -1, "Button", BS_GROUPBOX, 43, 90, 338, 50
   CONTROL "EDI [EAN]", -1, "Static", WS_GROUP, 50, 103, 38, 8
-  CONTROL "Última llamada", -1, "Button", BS_GROUPBOX, 384, 161, 108, 30
   CONTROL "Departamento", -1, "Static", WS_GROUP, 50, 116, 50, 8
   CONTROL "", 310, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 101, 153, 270, 11
   CONTROL "", 320, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 101, 166, 270, 11
@@ -20663,8 +20665,13 @@ FONT 8, "MS Sans Serif"
   CONTROL "Horario", -1, "Static", WS_GROUP, 217, 116, 28, 8
   CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 257, 126, 114, 11
   CONTROL "Entidad", -1, "Static", WS_GROUP, 217, 129, 28, 8
-  CONTROL "Petición", -1, "Static", WS_GROUP, 217, 236, 32, 10
-  CONTROL "Concesión", -1, "Static", WS_GROUP, 217, 248, 39, 10
+  CONTROL "Petición", -1, "Static", WS_GROUP, 349, 208, 31, 10
+  CONTROL "Concesión", -1, "Static", WS_GROUP, 349, 220, 39, 10
+  CONTROL "Inactivo", -1, "Button", BS_GROUPBOX, 43, 240, 222, 38
+  CONTROL "Fecha", -1, "Static", WS_GROUP, 142, 250, 25, 10
+  CONTROL "Última llamada", -1, "Static", WS_GROUP, 390, 155, 51, 10
+  CONTROL "Causa", -1, "Static", WS_GROUP, 49, 263, 25, 10
+  CONTROL "Causa", -1, "Static", WS_GROUP, 276, 263, 25, 10
 }
 
 CLIENT_19 DIALOG DISCARDABLE -3, 20, 496, 263
