--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -19373,26 +19373,26 @@ STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Usuarios"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 104, 40, 65, 12
-  CONTROL "", 110, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 104, 52, 272, 12
-  CONTROL "", 125, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 104, 64, 110, 33
-  CONTROL "", 120, "Edit", ES_PASSWORD|WS_BORDER|WS_TABSTOP, 104, 78, 110, 12
-  CONTROL "", 122, "Edit", ES_PASSWORD|WS_BORDER|WS_TABSTOP, 104, 90, 110, 12
-  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 104, 118, 85, 12
-  CONTROL "", 131, "Edit", WS_BORDER|WS_TABSTOP, 191, 118, 185, 12
-  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 104, 130, 85, 12
-  CONTROL "", 151, "Edit", WS_BORDER, 191, 130, 185, 12
-  CONTROL "", 155, "Edit", WS_BORDER|WS_TABSTOP, 104, 142, 85, 12
-  CONTROL "", 156, "Edit", WS_BORDER, 191, 142, 185, 12
-  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 104, 154, 85, 12
-  CONTROL "", 161, "Edit", WS_BORDER, 191, 154, 185, 12
-  CONTROL "", 370, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 104, 167, 85, 12
-  CONTROL "", 340, "Edit", WS_BORDER|WS_TABSTOP, 104, 180, 85, 12
-  CONTROL "", 140, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 104, 192, 272, 12
-  CONTROL "", 450, "Edit", WS_BORDER|WS_TABSTOP, 104, 204, 85, 12
-  CONTROL "", 451, "Edit", WS_BORDER, 191, 204, 185, 12
-  CONTROL "", 460, "Edit", WS_BORDER|WS_TABSTOP, 104, 216, 85, 12
-  CONTROL "", 461, "Edit", WS_BORDER|WS_TABSTOP, 191, 216, 185, 12
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 104, 40, 65, 11
+  CONTROL "", 110, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 104, 53, 272, 11
+  CONTROL "", 125, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 104, 66, 110, 33
+  CONTROL "", 120, "Edit", ES_PASSWORD|WS_BORDER|WS_TABSTOP, 104, 80, 110, 11
+  CONTROL "", 122, "Edit", ES_PASSWORD|WS_BORDER|WS_TABSTOP, 104, 93, 110, 11
+  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 104, 117, 85, 11
+  CONTROL "", 131, "Edit", WS_BORDER|WS_TABSTOP, 191, 117, 185, 11
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 104, 130, 85, 11
+  CONTROL "", 151, "Edit", WS_BORDER, 191, 130, 185, 11
+  CONTROL "", 155, "Edit", WS_BORDER|WS_TABSTOP, 104, 143, 85, 11
+  CONTROL "", 156, "Edit", WS_BORDER, 191, 143, 185, 11
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 104, 156, 85, 11
+  CONTROL "", 161, "Edit", WS_BORDER, 191, 156, 185, 11
+  CONTROL "", 370, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 104, 169, 85, 11
+  CONTROL "", 340, "Edit", WS_BORDER|WS_TABSTOP, 104, 182, 85, 11
+  CONTROL "", 140, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 104, 195, 272, 11
+  CONTROL "", 450, "Edit", WS_BORDER|WS_TABSTOP, 104, 208, 85, 11
+  CONTROL "", 451, "Edit", WS_BORDER, 191, 208, 185, 11
+  CONTROL "", 460, "Edit", WS_BORDER|WS_TABSTOP, 104, 221, 85, 11
+  CONTROL "", 461, "Edit", WS_BORDER|WS_TABSTOP, 191, 221, 185, 11
   CONTROL "No autorizado para cambio de precios", 240, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 39, 133, 10
   CONTROL "No mostrar rentabilidad ", 260, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 52, 133, 10
   CONTROL "No mostrar precios de costo", 270, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 65, 133, 10
@@ -19403,11 +19403,11 @@ FONT 8, "MS Sans Serif"
   CONTROL "Mostrar alertas", 310, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 130, 133, 10
   CONTROL "No pedir confirmación al eliminar", 330, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 143, 133, 10
   CONTROL "Filtrar operaciones por usuario", 350, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 156, 133, 10
-  CONTROL "Realizar documentos automáticos", 360, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 168, 133, 10
-  CONTROL "No abrir cajón portamonedas", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 180, 107, 10
-  CONTROL "No modificar unidades", 410, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 193, 107, 10
-  CONTROL "", 320, "Edit", WS_BORDER|WS_TABSTOP, 104, 243, 85, 12
-  CONTROL "", 321, "Edit", WS_BORDER|WS_TABSTOP, 191, 243, 185, 12
+  CONTROL "Realizar documentos automáticos", 360, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 169, 133, 10
+  CONTROL "No abrir cajón portamonedas", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 182, 107, 10
+  CONTROL "No modificar unidades", 410, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 195, 107, 10
+  CONTROL "", 320, "Edit", WS_BORDER|WS_TABSTOP, 104, 243, 85, 11
+  CONTROL "", 321, "Edit", WS_BORDER|WS_TABSTOP, 191, 243, 185, 11
   CONTROL "", 170, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_TRACKSELECT|TVS_FULLROWSELECT|WS_BORDER, 51, 258, 325, 115
   CONTROL "Sin acceso", 180, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 259, 70, 10
   CONTROL "Añadir, duplicar", 190, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 272, 70, 10
@@ -19423,17 +19423,17 @@ FONT 8, "MS Sans Serif"
   CONTROL "Nombre", -1, "Static", WS_GROUP, 51, 55, 46, 8
   CONTROL "Clave acceso", 121, "Static", WS_GROUP, 51, 81, 46, 8
   CONTROL "Tipo", -1, "Static", WS_GROUP, 51, 68, 46, 8
-  CONTROL "Mapa de accesos", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 233, 511, 144
+  CONTROL "Mapa de accesos", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 235, 511, 144
   CONTROL "Almacén", -1, "Static", WS_GROUP, 51, 121, 41, 8
   CONTROL "Caja", -1, "Static", WS_GROUP, 51, 133, 41, 8
   CONTROL "Imágen", -1, "Static", WS_GROUP, 51, 195, 41, 8
-  CONTROL "Usuario", -1, "Button", BS_GROUPBOX|WS_TABSTOP|0x00000020, 44, 30, 338, 75
+  CONTROL "Usuario", -1, "Button", BS_GROUPBOX|WS_TABSTOP|0x00000020, 44, 30, 338, 77
   CONTROL "Delegación", -1, "Static", WS_GROUP, 51, 157, 41, 8
   CONTROL "Repetir clave", 123, "Static", WS_GROUP, 51, 93, 46, 8
-  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX|WS_TABSTOP|0x00000020, 390, 30, 165, 190
-  CONTROL "Valores por defecto", -1, "Button", BS_GROUPBOX|WS_TABSTOP|0x00000020, 44, 107, 338, 125
+  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX|WS_TABSTOP|0x00000020, 390, 30, 165, 206
+  CONTROL "Valores por defecto", -1, "Button", BS_GROUPBOX|WS_TABSTOP|0x00000020, 44, 107, 338, 129
   CONTROL "Grupo", 322, "Static", WS_GROUP, 51, 246, 33, 8
-  CONTROL "", 341, "Edit", WS_BORDER, 191, 180, 185, 12
+  CONTROL "", 341, "Edit", WS_BORDER, 191, 182, 185, 11
   CONTROL "Operario", -1, "Static", WS_GROUP, 51, 183, 41, 8
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Usuarios", -1, "Static", WS_GROUP, 44, 3, 120, 8
@@ -19441,6 +19441,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "Tipo incidencia", -1, "Static", WS_GROUP, 51, 207, 52, 8
   CONTROL "Sala de venta", 4003, "Static", WS_GROUP, 52, 219, 50, 8
   CONTROL "Serie", -1, "Static", WS_GROUP, 51, 171, 41, 8
+  CONTROL "No permitir cobros", 420, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 208, 107, 10
+  CONTROL "No permitir entregar notas", 430, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 221, 107, 10
 }
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
