--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -19394,21 +19394,21 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 451, "Edit", WS_BORDER, 191, 208, 185, 11
   CONTROL "", 460, "Edit", WS_BORDER|WS_TABSTOP, 104, 221, 85, 11
   CONTROL "", 461, "Edit", WS_BORDER|WS_TABSTOP, 191, 221, 185, 11
-  CONTROL "No autorizado para cambio de precios", 240, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 39, 133, 10
-  CONTROL "No mostrar rentabilidad ", 260, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 52, 133, 10
-  CONTROL "No mostrar precios de costo", 270, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 65, 133, 10
-  CONTROL "Arqueos ciegos", 300, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 78, 133, 10
-  CONTROL "Seleccionar artículos por familias", 250, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 91, 133, 10
-  CONTROL "No mostrar imágen de fondo", 280, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 104, 133, 10
-  CONTROL "No mostrar página de inicio", 290, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 117, 133, 10
-  CONTROL "Mostrar alertas", 310, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 130, 133, 10
-  CONTROL "No pedir confirmación al eliminar", 330, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 143, 133, 10
-  CONTROL "Filtrar operaciones por usuario", 350, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 156, 133, 10
-  CONTROL "Realizar documentos automáticos", 360, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 169, 133, 10
-  CONTROL "No abrir cajón portamonedas", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 182, 107, 10
-  CONTROL "No modificar unidades", 410, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 195, 107, 10
-  CONTROL "", 320, "Edit", WS_BORDER|WS_TABSTOP, 104, 243, 85, 11
-  CONTROL "", 321, "Edit", WS_BORDER|WS_TABSTOP, 191, 243, 185, 11
+  CONTROL "No autorizado para cambio de precios", 240, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 42, 133, 10
+  CONTROL "No mostrar rentabilidad ", 260, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 53, 87, 10
+  CONTROL "No mostrar precios de costo", 270, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 64, 101, 10
+  CONTROL "Arqueos ciegos", 300, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 75, 62, 10
+  CONTROL "Seleccionar artículos por familias", 250, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 86, 117, 10
+  CONTROL "No mostrar imágen de fondo", 280, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 97, 102, 10
+  CONTROL "No mostrar página de inicio", 290, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 108, 99, 10
+  CONTROL "Mostrar alertas", 310, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 119, 59, 10
+  CONTROL "No pedir confirmación al eliminar", 330, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 130, 115, 10
+  CONTROL "Filtrar operaciones por usuario", 350, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 141, 107, 10
+  CONTROL "Realizar documentos automáticos", 360, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 152, 119, 10
+  CONTROL "No abrir cajón portamonedas", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 163, 104, 10
+  CONTROL "No modificar unidades", 410, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 174, 83, 10
+  CONTROL "", 320, "Edit", WS_BORDER|WS_TABSTOP, 104, 245, 85, 11
+  CONTROL "", 321, "Edit", WS_BORDER|WS_TABSTOP, 191, 245, 185, 11
   CONTROL "", 170, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_TRACKSELECT|TVS_FULLROWSELECT|WS_BORDER, 51, 258, 325, 115
   CONTROL "Sin acceso", 180, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 259, 70, 10
   CONTROL "Añadir, duplicar", 190, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 272, 70, 10
@@ -19433,7 +19433,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Repetir clave", 123, "Static", WS_GROUP, 51, 93, 46, 8
   CONTROL "Propiedades", -1, "Button", BS_GROUPBOX|WS_TABSTOP|0x00000020, 390, 30, 165, 206
   CONTROL "Valores por defecto", -1, "Button", BS_GROUPBOX|WS_TABSTOP|0x00000020, 44, 107, 338, 129
-  CONTROL "Grupo", 322, "Static", WS_GROUP, 51, 246, 33, 8
+  CONTROL "Grupo", 322, "Static", WS_GROUP, 51, 247, 33, 8
   CONTROL "", 341, "Edit", WS_BORDER, 191, 182, 185, 11
   CONTROL "Operario", -1, "Static", WS_GROUP, 51, 183, 41, 8
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
@@ -19442,8 +19442,9 @@ FONT 8, "MS Sans Serif"
   CONTROL "Tipo incidencia", -1, "Static", WS_GROUP, 51, 207, 52, 8
   CONTROL "Sala de venta", 4003, "Static", WS_GROUP, 52, 219, 50, 8
   CONTROL "Serie", -1, "Static", WS_GROUP, 51, 171, 41, 8
-  CONTROL "No permitir cobros", 420, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 208, 107, 10
-  CONTROL "No permitir entregar notas", 430, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 221, 107, 10
+  CONTROL "No permitir cobros", 420, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 185, 70, 10
+  CONTROL "No permitir entregar notas", 430, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 196, 94, 10
+  CONTROL "No imprimir comandas", 440, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 207, 82, 10
 }
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
@@ -20587,16 +20588,39 @@ FONT 8, "MS Sans Serif"
   CONTROL "Descripción", -1, "Static", WS_GROUP, 4, 12, 39, 8
 }
 
-DLG_SIGNATURE DIALOG DISCARDABLE -32768, 65, 359, 205
+DLG_SIGNATURE DIALOG DISCARDABLE -32768, 65, 577, 416
 STYLE WS_POPUP|DS_MODALFRAME|DS_SYSMODAL|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Firma"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "&Aceptar", 100, "Button", WS_TABSTOP, 246, 188, 50, 14
-  CONTROL "&Cancelar", 101, "Button", WS_TABSTOP, 305, 188, 50, 14
-  CONTROL "&Limpiar", 102, "Button", WS_TABSTOP, 4, 188, 35, 14
-  CONTROL "", 200, "Static", SS_BLACKFRAME, 4, 18, 350, 166
-  CONTROL "He leido y acepto las condicones del contrato de venta.", 210, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 4, 5, 189, 10
+  CONTROL "&Aceptar", 100, "Button", WS_TABSTOP, 465, 398, 50, 14
+  CONTROL "&Cancelar", 101, "Button", WS_TABSTOP, 524, 398, 50, 14
+  CONTROL "&Limpiar", 102, "Button", WS_TABSTOP, 4, 398, 35, 14
+  CONTROL "", 200, "Static", SS_BLACKFRAME, 8, 242, 561, 149
+  CONTROL "He leido y acepto las condicones del contrato de venta.", 210, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 4, 219, 189, 10
+  CONTROL "", 620, "RichEdit20A", WS_TABSTOP|0x00a01004, 8, 27, 562, 185
+  CONTROL "", 600, "TBtnBmp", 0x00000000, 8, 13, 12, 12
+  CONTROL "", 601, "TBtnBmp", 0x00000000, 21, 13, 12, 12
+  CONTROL "", 602, "TBtnBmp", 0x00000000, 37, 13, 12, 12
+  CONTROL "", 603, "TBtnBmp", 0x00000000, 53, 13, 12, 12
+  CONTROL "", 604, "TBtnBmp", 0x00000000, 66, 13, 12, 12
+  CONTROL "", 605, "TBtnBmp", 0x00000000, 79, 13, 12, 12
+  CONTROL "", 606, "TBtnBmp", 0x00000000, 95, 13, 12, 12
+  CONTROL "", 607, "TBtnBmp", 0x00000000, 108, 13, 12, 12
+  CONTROL "", 608, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_DISABLENOSCROLL, 122, 13, 41, 68
+  CONTROL "", 609, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_DISABLENOSCROLL|WS_VSCROLL, 165, 13, 95, 68
+  CONTROL "", 610, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_DISABLENOSCROLL, 262, 13, 33, 68
+  CONTROL "", 611, "TBtnBmp", 0x00000000, 297, 13, 12, 12
+  CONTROL "", 612, "TBtnBmp", 0x00000000, 310, 13, 12, 12
+  CONTROL "", 613, "TBtnBmp", 0x00000000, 323, 13, 12, 12
+  CONTROL "", 614, "TBtnBmp", 0x00000000, 339, 13, 12, 12
+  CONTROL "", 615, "TBtnBmp", 0x00000000, 352, 13, 12, 12
+  CONTROL "", 616, "TBtnBmp", 0x00000000, 365, 13, 12, 12
+  CONTROL "", 617, "TBtnBmp", 0x00000000, 378, 13, 12, 12
+  CONTROL "", 618, "TBtnBmp", 0x00000000, 394, 13, 12, 12
+  CONTROL "", 619, "TBtnBmp", 0x00000000, 407, 13, 12, 12
+  CONTROL "Condiciones de venta", -1, "Button", BS_GROUPBOX, 4, 2, 569, 214
+  CONTROL "Firma", -1, "Button", BS_GROUPBOX, 4, 231, 569, 165
 }
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
